Login Functionality. Adding styles